# Release-gate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  NEXT.md  README.md  action.yml  pyproject.toml
.claude/: tier.json
.github/workflows/: ci.yml
docs/: architecture.md  extending.md  testing.md
examples/: pricing.json
examples/assistant-cheap-regression/: baseline.json  candidate.json  dataset.json  scorers.json  thresholds.json
examples/assistant-cheap-regression/fixtures/: baseline.json  candidate.json
examples/extraction-api/: baseline.json  candidate.json  dataset.json  scorers.json  thresholds.json
examples/extraction-api/fixtures/: baseline.json  candidate.json
examples/rag-support-bot/: baseline.json  candidate.json  dataset.json  scorers.json  thresholds.json
examples/rag-support-bot/fixtures/: baseline.json  candidate.json
src/llm_release_gate/: __init__.py  __main__.py  cli.py  errors.py  gate.py  hashing.py  loading.py  manifest.py  metrics.py  pricing.py  runner.py
src/llm_release_gate/adapters/: __init__.py  extraction.py  grounded.py
src/llm_release_gate/providers/: __init__.py  fake.py
src/llm_release_gate/reports/: __init__.py  html.py  markdown.py
src/llm_release_gate/scorers/: __init__.py  abstention.py  citations.py  quality.py  schema.py
tests/: conftest.py  test_cli.py  test_cost.py  test_hashing.py  test_provider_failure.py  test_reports.py  test_reproducibility.py  test_scorers.py  test_verdicts.py
