[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-release-gate"
version = "0.1.0"
description = "CLI + GitHub Action that blocks unsafe LLM app changes: runs baseline vs candidate configs over a golden dataset and fails the check on a material regression."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "llm-release-gate contributors" }]
keywords = ["llm", "evaluation", "regression", "ci", "release-gate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# Deliberately zero runtime dependencies: the gate must run anywhere CI runs.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
llm-release-gate = "llm_release_gate.cli:main"

[project.urls]
Repository = "https://github.com/Chris0Jeky/Release-gate"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
